--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,11 +35,11 @@
         android:gravity="center_horizontal"
         android:hint="rtmp://192.168.100.248:11935/ID" />
 
-    <Button
-        android:id="@+id/b_start_stop"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="@string/start_button" />
+<!--    <Button-->
+<!--        android:id="@+id/b_start_stop"-->
+<!--        android:layout_width="100dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="@string/start_button" />-->
     <!--  <GridView-->
     <!--      android:id="@+id/list"-->
     <!--      android:layout_width="match_parent"-->
